# Synthia

./: .gitignore  CMakeLists.txt  Readme.md
include/: AudioPlayer.h  AudioStreamer.h  GeneralMusic.h  HollowKnightMusic.h  Instrument.h  Song.h  Synthesizer.h  Timer.h
linux_build/: CMakeCache.txt
src/: AudioPlayer.cpp  AudioStreamer.cpp  Song.cpp  Synthesizer.cpp  main.cpp
